--- a/daftar.html
+++ b/daftar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Daftar - Lokerku</title>
+	<title>Daftar - Dinkominfo Banyumas</title>
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
