Update Image di Index
Update Index di Informasi Website

--- a/index.html
+++ b/index.html
@@ -52,27 +52,27 @@
 		<div class="container text-center">
 			<h3>Informasi Website</h3>
 			<div>
-				<img src="images/ajibarang.png">
-				<img src="images/banyumas.png">
-				<img src="images/baturaden.png">
-				<img src="images/cilongok.png">
-				<img src="images/gumelar.png">
-				<img src="images/jatilawang.png">
+				<img src="images/Ajibarang.png">
+				<img src="images/Banyumas.png">
+				<img src="images/Baturaden.png">
+				<img src="images/Cilongok.png">
+				<img src="images/Gumelar.png">
+				<img src="images/Jatilawang.png">
 			</div>
 			<div>
-				<img src="images/kalibagor.png">
-				<img src="images/karanglewas.png">
-				<img src="images/kebasen.png">
-				<img src="images/kedungbanteng.png">
-				<img src="images/kembaran.png">
+				<img src="images/Kalibagor.png">
+				<img src="images/Karanglewas.png">
+				<img src="images/Kebasen.png">
+				<img src="images/Kedungbanteng.png">
+				<img src="images/Kembaran.png">
 				<img src="images/Kemranjen.png">
 			</div>
 			<div>
-				<img src="images/lumbir.png">
-				<img src="images/patikraja.png">
-				<img src="images/pekuncen.png">
-				<img src="images/purwojati.png">
-				<img src="images/rawalo.png">
+				<img src="images/Lumbir.png">
+				<img src="images/Patikraja.png">
+				<img src="images/Pekuncen.png">
+				<img src="images/Purwojati.png">
+				<img src="images/Rawalo.png">
 				<img src="images/arrow.jpg">
 			</div>
 		</div>
