--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<img src="images/Kalibagor.png">
 				<img src="images/Karanglewas.png">
 				<img src="images/Kebasen.png">
-				<img src="images/Kedungbanteng.png">
+				<img src="images/KedungBanteng.png">
 				<img src="images/Kembaran.png">
 				<img src="images/Kemranjen.png">
 			</div>
