--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
 						<input type="checkbox" name="form-check-input" id="remember">
 						<label class="form-check-label" for="remember">Ingat Saya</label>
 					</div>
-					<a href="index.html" type="submit" class="btn w-100">Login</a> 
+					<a href="pendaftaran.html" type="submit" class="btn w-100">Login</a> 
 				</form>
 				<p class="mb-0 text-center-login">Belum punya akun? <a href="daftar.html" class="text-decoration-none">Daftar</a></p>
 			</div>
