--- a/admin/user.html
+++ b/admin/user.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Lokerku - Admin</title>
+    <title>Admin - Dinkominfo Banyumas</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -33,7 +33,7 @@
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-icon">
-                   <img src="img/logo.png">
+                   <img src="img/logo_bb.png">
                 </div>
             </a>
 
@@ -44,7 +44,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-star"></i>
-                    <span>Upload Lowongan</span></a>
+                    <span>Domain</span></a>
             </li>
 
             <!-- Divider -->
